# Operation-systems

filesLab1/: creator.cpp  employee.h  main.cpp  reporter.cpp
filesLab2/: CMakeLists.txt  README.md  gitignore
filesLab2/include/: shared_data.h  threads.h
filesLab2/src/: main.cpp  threads.cpp
filesLab2/tests/: UnitTest.cpp
filesLab3/: CMakeLists.txt
filesLab3/src/: array.cpp  array.h  main.cpp  marker.cpp  marker.h
filesLab3/tests/: test.cpp
filesLab4/: CMakeLists.txt
filesLab4/headers/: SharedQueue.h
filesLab4/src/: Receiver.cpp  Sender.cpp  SharedQueue.cpp
filesLab4/tests/: test_reciever.cpp  test_sender.cpp  test_shared_queue.cpp
